// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculators/gross-to-net > edge cases > additional tax allowance 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "506,25€",
  "outputEmployerTotalInsurancesYear": "6.075€",
  "outputResCareInsuranceMonth": "60€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "720€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "45€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "540€",
  "outputResEmployerGrossWageMonth": "3.007,75€",
  "outputResEmployerGrossWageYear": "36.093€",
  "outputResEmployerHealthInsuranceMonth": "196,25€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "2.355€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "196,25€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "2.355€",
  "outputResIncomeTaxMonth": "243,41€",
  "outputResIncomeTaxYear": "2.920,92€",
  "outputResNetWageMonth": "1.735,34€",
  "outputResNetWageYear": "20.824,08€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "521,25€",
  "outputTotalInsurancesYear": "6.255€",
  "outputTotalTaxes": "243,41€",
  "outputTotalTaxesYear": "2.920,92€",
}
`;

exports[`calculators/gross-to-net > edge cases > care insurance special case for Sachsen 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "493,75€",
  "outputEmployerTotalInsurancesYear": "5.925€",
  "outputResCareInsuranceMonth": "72,50€",
  "outputResCareInsurancePercentage": "2,90%",
  "outputResCareInsuranceYear": "870€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (9% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "32,50€",
  "outputResEmployerCareInsurancePercentage": "1,30%",
  "outputResEmployerCareInsuranceYear": "390€",
  "outputResEmployerGrossWageMonth": "2.995,25€",
  "outputResEmployerGrossWageYear": "35.943€",
  "outputResEmployerHealthInsuranceMonth": "196,25€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "2.355€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "196,25€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "2.355€",
  "outputResIncomeTaxMonth": "262,75€",
  "outputResIncomeTaxYear": "3.153€",
  "outputResNetWageMonth": "1.703,50€",
  "outputResNetWageYear": "20.442€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "533,75€",
  "outputTotalInsurancesYear": "6.405€",
  "outputTotalTaxes": "262,75€",
  "outputTotalTaxesYear": "3.153€",
}
`;

exports[`calculators/gross-to-net > edge cases > input period 0 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "506,25€",
  "outputEmployerTotalInsurancesYear": "6.075€",
  "outputResCareInsuranceMonth": "60€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "720€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "45€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "540€",
  "outputResEmployerGrossWageMonth": "3.007,75€",
  "outputResEmployerGrossWageYear": "36.093€",
  "outputResEmployerHealthInsuranceMonth": "196,25€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "2.355€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "196,25€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "2.355€",
  "outputResIncomeTaxMonth": "266,25€",
  "outputResIncomeTaxYear": "3.195€",
  "outputResNetWageMonth": "1.712,50€",
  "outputResNetWageYear": "20.550€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "521,25€",
  "outputTotalInsurancesYear": "6.255€",
  "outputTotalTaxes": "266,25€",
  "outputTotalTaxesYear": "3.195€",
}
`;

exports[`calculators/gross-to-net > edge cases > low pkv contribution in 2019 1`] = `
{
  "outputDisableResCareInsurance": true,
  "outputEmployerTotalInsurances": "315€",
  "outputEmployerTotalInsurancesYear": "3.780€",
  "outputResCareInsuranceMonth": "0€",
  "outputResCareInsurancePercentage": "0,00%",
  "outputResCareInsuranceYear": "0€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "0€",
  "outputResEmployerCareInsurancePercentage": "0,00%",
  "outputResEmployerCareInsuranceYear": "0€",
  "outputResEmployerGrossWageMonth": "2.816,50€",
  "outputResEmployerGrossWageYear": "33.798€",
  "outputResEmployerHealthInsuranceMonth": "50€",
  "outputResEmployerHealthInsurancePercentage": "0,00%",
  "outputResEmployerHealthInsuranceYear": "600€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "50€",
  "outputResHealthInsurancePercentage": "0,00%",
  "outputResHealthInsuranceYear": "600€",
  "outputResIncomeTaxMonth": "314,50€",
  "outputResIncomeTaxYear": "3.774€",
  "outputResNetWageMonth": "1.853,21€",
  "outputResNetWageYear": "22.238,52€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "50€",
  "outputResPrivateHealthInsuranceEmployerYear": "600€",
  "outputResSolidaritySurchargeMonth": "17,29€",
  "outputResSolidaritySurchargeYear": "207,48€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "315€",
  "outputTotalInsurancesYear": "3.780€",
  "outputTotalTaxes": "331,79€",
  "outputTotalTaxesYear": "3.981,48€",
}
`;

exports[`calculators/gross-to-net > private health insurance > with employer subsidy 1`] = `
{
  "outputDisableResCareInsurance": true,
  "outputEmployerTotalInsurances": "632,97€",
  "outputEmployerTotalInsurancesYear": "7.595,64€",
  "outputResCareInsuranceMonth": "0€",
  "outputResCareInsurancePercentage": "0,00%",
  "outputResCareInsuranceYear": "0€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "0€",
  "outputResEmployerCareInsurancePercentage": "0,00%",
  "outputResEmployerCareInsuranceYear": "0€",
  "outputResEmployerGrossWageMonth": "3.134,47€",
  "outputResEmployerGrossWageYear": "37.613,64€",
  "outputResEmployerHealthInsuranceMonth": "367,97€",
  "outputResEmployerHealthInsurancePercentage": "0,00%",
  "outputResEmployerHealthInsuranceYear": "4.415,64€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "432,03€",
  "outputResHealthInsurancePercentage": "0,00%",
  "outputResHealthInsuranceYear": "5.184,36€",
  "outputResIncomeTaxMonth": "287,66€",
  "outputResIncomeTaxYear": "3.451,92€",
  "outputResNetWageMonth": "1.515,31€",
  "outputResNetWageYear": "18.183,72€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "367,97€",
  "outputResPrivateHealthInsuranceEmployerYear": "4.415,64€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "697,03€",
  "outputTotalInsurancesYear": "8.364,36€",
  "outputTotalTaxes": "287,66€",
  "outputTotalTaxesYear": "3.451,92€",
}
`;

exports[`calculators/gross-to-net > private health insurance > without employer subsidy 1`] = `
{
  "outputDisableResCareInsurance": true,
  "outputEmployerTotalInsurances": "265€",
  "outputEmployerTotalInsurancesYear": "3.180€",
  "outputResCareInsuranceMonth": "0€",
  "outputResCareInsurancePercentage": "0,00%",
  "outputResCareInsuranceYear": "0€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "0€",
  "outputResEmployerCareInsurancePercentage": "0,00%",
  "outputResEmployerCareInsuranceYear": "0€",
  "outputResEmployerGrossWageMonth": "2.766,50€",
  "outputResEmployerGrossWageYear": "33.198€",
  "outputResEmployerHealthInsuranceMonth": "0€",
  "outputResEmployerHealthInsurancePercentage": "0,00%",
  "outputResEmployerHealthInsuranceYear": "0€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "800€",
  "outputResHealthInsurancePercentage": "0,00%",
  "outputResHealthInsuranceYear": "9.600€",
  "outputResIncomeTaxMonth": "287,66€",
  "outputResIncomeTaxYear": "3.451,92€",
  "outputResNetWageMonth": "1.147,34€",
  "outputResNetWageYear": "13.768,08€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "1.065€",
  "outputTotalInsurancesYear": "12.780€",
  "outputTotalTaxes": "287,66€",
  "outputTotalTaxesYear": "3.451,92€",
}
`;

exports[`calculators/gross-to-net > reduced health insurance > should return specific result for user made input 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "485€",
  "outputEmployerTotalInsurancesYear": "5.820€",
  "outputResCareInsuranceMonth": "60€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "720€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "45€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "540€",
  "outputResEmployerGrossWageMonth": "2.986,50€",
  "outputResEmployerGrossWageYear": "35.838€",
  "outputResEmployerHealthInsuranceMonth": "175€",
  "outputResEmployerHealthInsurancePercentage": "7,00%",
  "outputResEmployerHealthInsuranceYear": "2.100€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "175€",
  "outputResHealthInsurancePercentage": "7,00%",
  "outputResHealthInsuranceYear": "2.100€",
  "outputResIncomeTaxMonth": "270€",
  "outputResIncomeTaxYear": "3.240€",
  "outputResNetWageMonth": "1.730€",
  "outputResNetWageYear": "20.760€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "500€",
  "outputTotalInsurancesYear": "6.000€",
  "outputTotalTaxes": "270€",
  "outputTotalTaxesYear": "3.240€",
}
`;

exports[`calculators/gross-to-net > tax year 2019 > should return specific result for tax year 2019 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "506,25€",
  "outputEmployerTotalInsurancesYear": "6.075€",
  "outputResCareInsuranceMonth": "60€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "720€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "45€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "540€",
  "outputResEmployerGrossWageMonth": "3.007,75€",
  "outputResEmployerGrossWageYear": "36.093€",
  "outputResEmployerHealthInsuranceMonth": "196,25€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "2.355€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "196,25€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "2.355€",
  "outputResIncomeTaxMonth": "293,25€",
  "outputResIncomeTaxYear": "3.519€",
  "outputResNetWageMonth": "1.669,38€",
  "outputResNetWageYear": "20.032,56€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "16,12€",
  "outputResSolidaritySurchargeYear": "193,44€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "521,25€",
  "outputTotalInsurancesYear": "6.255€",
  "outputTotalTaxes": "309,37€",
  "outputTotalTaxesYear": "3.712,44€",
}
`;

exports[`calculators/gross-to-net > tax year 2020 > should return specific result for tax year 2020 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "506,25€",
  "outputEmployerTotalInsurancesYear": "6.075€",
  "outputResCareInsuranceMonth": "60€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "720€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "45€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "540€",
  "outputResEmployerGrossWageMonth": "3.007,75€",
  "outputResEmployerGrossWageYear": "36.093€",
  "outputResEmployerHealthInsuranceMonth": "196,25€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "2.355€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "196,25€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "2.355€",
  "outputResIncomeTaxMonth": "284,41€",
  "outputResIncomeTaxYear": "3.412,92€",
  "outputResNetWageMonth": "1.678,70€",
  "outputResNetWageYear": "20.144,40€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "15,64€",
  "outputResSolidaritySurchargeYear": "187,68€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "521,25€",
  "outputTotalInsurancesYear": "6.255€",
  "outputTotalTaxes": "300,05€",
  "outputTotalTaxesYear": "3.600,60€",
}
`;

exports[`calculators/gross-to-net > tax year 2021 > should return specific result for tax year 2021 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "506,25€",
  "outputEmployerTotalInsurancesYear": "6.075€",
  "outputResCareInsuranceMonth": "60€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "720€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "45€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "540€",
  "outputResEmployerGrossWageMonth": "3.007,75€",
  "outputResEmployerGrossWageYear": "36.093€",
  "outputResEmployerHealthInsuranceMonth": "196,25€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "2.355€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "196,25€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "2.355€",
  "outputResIncomeTaxMonth": "274,66€",
  "outputResIncomeTaxYear": "3.295,92€",
  "outputResNetWageMonth": "1.704,09€",
  "outputResNetWageYear": "20.449,08€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "521,25€",
  "outputTotalInsurancesYear": "6.255€",
  "outputTotalTaxes": "274,66€",
  "outputTotalTaxesYear": "3.295,92€",
}
`;

exports[`calculators/gross-to-net > tax year 2022 > should return specific result for tax year 2022 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "506,25€",
  "outputEmployerTotalInsurancesYear": "6.075€",
  "outputResCareInsuranceMonth": "60€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "720€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "45€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "540€",
  "outputResEmployerGrossWageMonth": "3.007,75€",
  "outputResEmployerGrossWageYear": "36.093€",
  "outputResEmployerHealthInsuranceMonth": "196,25€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "2.355€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "196,25€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "2.355€",
  "outputResIncomeTaxMonth": "266,25€",
  "outputResIncomeTaxYear": "3.195€",
  "outputResNetWageMonth": "1.712,50€",
  "outputResNetWageYear": "20.550€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "521,25€",
  "outputTotalInsurancesYear": "6.255€",
  "outputTotalTaxes": "266,25€",
  "outputTotalTaxesYear": "3.195€",
}
`;

exports[`calculators/gross-to-net > tax year 2023 > should return specific result for tax year 2023 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "506,25€",
  "outputEmployerTotalInsurancesYear": "6.075€",
  "outputResCareInsuranceMonth": "60€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "720€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "45€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "540€",
  "outputResEmployerGrossWageMonth": "3.007,75€",
  "outputResEmployerGrossWageYear": "36.093€",
  "outputResEmployerHealthInsuranceMonth": "196,25€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "2.355€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "196,25€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "2.355€",
  "outputResIncomeTaxMonth": "228€",
  "outputResIncomeTaxYear": "2.736€",
  "outputResNetWageMonth": "1.750,75€",
  "outputResNetWageYear": "21.009€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "521,25€",
  "outputTotalInsurancesYear": "6.255€",
  "outputTotalTaxes": "228€",
  "outputTotalTaxesYear": "2.736€",
}
`;

exports[`calculators/gross-to-net > tax year 2024 > should return specific result for tax year 2024 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "506,25€",
  "outputEmployerTotalInsurancesYear": "6.075€",
  "outputResCareInsuranceMonth": "60€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "720€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "45€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "540€",
  "outputResEmployerGrossWageMonth": "3.007,75€",
  "outputResEmployerGrossWageYear": "36.093€",
  "outputResEmployerHealthInsuranceMonth": "196,25€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "2.355€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "196,25€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "2.355€",
  "outputResIncomeTaxMonth": "176,33€",
  "outputResIncomeTaxYear": "2.115,96€",
  "outputResNetWageMonth": "1.802,42€",
  "outputResNetWageYear": "21.629,04€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "521,25€",
  "outputTotalInsurancesYear": "6.255€",
  "outputTotalTaxes": "176,33€",
  "outputTotalTaxesYear": "2.115,96€",
}
`;

exports[`calculators/gross-to-net > with children > five children 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "506,25€",
  "outputEmployerTotalInsurancesYear": "6.075€",
  "outputResCareInsuranceMonth": "20€",
  "outputResCareInsurancePercentage": "0,80%",
  "outputResCareInsuranceYear": "240€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "45€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "540€",
  "outputResEmployerGrossWageMonth": "3.007,75€",
  "outputResEmployerGrossWageYear": "36.093€",
  "outputResEmployerHealthInsuranceMonth": "196,25€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "2.355€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "196,25€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "2.355€",
  "outputResIncomeTaxMonth": "268,66€",
  "outputResIncomeTaxYear": "3.223,92€",
  "outputResNetWageMonth": "1.750,09€",
  "outputResNetWageYear": "21.001,08€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "481,25€",
  "outputTotalInsurancesYear": "5.775€",
  "outputTotalTaxes": "268,66€",
  "outputTotalTaxesYear": "3.223,92€",
}
`;

exports[`calculators/gross-to-net > with children > no children 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "506,25€",
  "outputEmployerTotalInsurancesYear": "6.075€",
  "outputResCareInsuranceMonth": "60€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "720€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "45€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "540€",
  "outputResEmployerGrossWageMonth": "3.007,75€",
  "outputResEmployerGrossWageYear": "36.093€",
  "outputResEmployerHealthInsuranceMonth": "196,25€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "2.355€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "196,25€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "2.355€",
  "outputResIncomeTaxMonth": "266,25€",
  "outputResIncomeTaxYear": "3.195€",
  "outputResNetWageMonth": "1.712,50€",
  "outputResNetWageYear": "20.550€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "521,25€",
  "outputTotalInsurancesYear": "6.255€",
  "outputTotalTaxes": "266,25€",
  "outputTotalTaxesYear": "3.195€",
}
`;

exports[`calculators/gross-to-net > with children > one child 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "506,25€",
  "outputEmployerTotalInsurancesYear": "6.075€",
  "outputResCareInsuranceMonth": "45€",
  "outputResCareInsurancePercentage": "1,80%",
  "outputResCareInsuranceYear": "540€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "45€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "540€",
  "outputResEmployerGrossWageMonth": "3.007,75€",
  "outputResEmployerGrossWageYear": "36.093€",
  "outputResEmployerHealthInsuranceMonth": "196,25€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "2.355€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "196,25€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "2.355€",
  "outputResIncomeTaxMonth": "268,66€",
  "outputResIncomeTaxYear": "3.223,92€",
  "outputResNetWageMonth": "1.725,09€",
  "outputResNetWageYear": "20.701,08€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "506,25€",
  "outputTotalInsurancesYear": "6.075€",
  "outputTotalTaxes": "268,66€",
  "outputTotalTaxesYear": "3.223,92€",
}
`;

exports[`calculators/gross-to-net > with children and church > monthly period 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "1.155,82€",
  "outputEmployerTotalInsurancesYear": "13.869,83€",
  "outputResCareInsuranceMonth": "87,08€",
  "outputResCareInsurancePercentage": "1,80%",
  "outputResCareInsuranceYear": "1.044,90€",
  "outputResChurchTaxMonth": "123,01€",
  "outputResChurchTaxPercentage": " (9% der Lohnsteuer)",
  "outputResChurchTaxYear": "1.476,18€",
  "outputResEmployerCareInsuranceMonth": "87,08€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "1.044,90€",
  "outputResEmployerGrossWageMonth": "7.659,72€",
  "outputResEmployerGrossWageYear": "91.916,63€",
  "outputResEmployerHealthInsuranceMonth": "379,74€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "4.556,93€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "3,90€",
  "outputResEmployerLevyThreeYear": "46,80€",
  "outputResEmployerLevyTotal": "3,90€",
  "outputResEmployerLevyTotalYear": "46,80€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "604,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "7.254€",
  "outputResEmployerUnemploymentInsuranceMonth": "84,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "1.014€",
  "outputResGrossWageMonth": "6.500€",
  "outputResGrossWageYear": "78.000€",
  "outputResHealthInsuranceMonth": "379,74€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "4.556,93€",
  "outputResIncomeTaxMonth": "1.513,58€",
  "outputResIncomeTaxYear": "18.162,96€",
  "outputResNetWageMonth": "3.707,59€",
  "outputResNetWageYear": "44.491,04€",
  "outputResPensionInsuranceMonth": "604,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "7.254€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "84,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "1.014€",
  "outputTotalInsurances": "1.155,82€",
  "outputTotalInsurancesYear": "13.869,83€",
  "outputTotalTaxes": "1.636,59€",
  "outputTotalTaxesYear": "19.639,14€",
}
`;

exports[`calculators/gross-to-net > with children and church > yearly period 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "1.155,82€",
  "outputEmployerTotalInsurancesYear": "13.869,83€",
  "outputResCareInsuranceMonth": "87,08€",
  "outputResCareInsurancePercentage": "1,80%",
  "outputResCareInsuranceYear": "1.044,90€",
  "outputResChurchTaxMonth": "123,01€",
  "outputResChurchTaxPercentage": " (9% der Lohnsteuer)",
  "outputResChurchTaxYear": "1.476,18€",
  "outputResEmployerCareInsuranceMonth": "87,08€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "1.044,90€",
  "outputResEmployerGrossWageMonth": "7.659,72€",
  "outputResEmployerGrossWageYear": "91.916,63€",
  "outputResEmployerHealthInsuranceMonth": "379,74€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "4.556,93€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "3,90€",
  "outputResEmployerLevyThreeYear": "46,80€",
  "outputResEmployerLevyTotal": "3,90€",
  "outputResEmployerLevyTotalYear": "46,80€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "604,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "7.254€",
  "outputResEmployerUnemploymentInsuranceMonth": "84,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "1.014€",
  "outputResGrossWageMonth": "6.500€",
  "outputResGrossWageYear": "78.000€",
  "outputResHealthInsuranceMonth": "379,74€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "4.556,93€",
  "outputResIncomeTaxMonth": "1.513,58€",
  "outputResIncomeTaxYear": "18.162,96€",
  "outputResNetWageMonth": "3.707,59€",
  "outputResNetWageYear": "44.491,04€",
  "outputResPensionInsuranceMonth": "604,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "7.254€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "84,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "1.014€",
  "outputTotalInsurances": "1.155,82€",
  "outputTotalInsurancesYear": "13.869,83€",
  "outputTotalTaxes": "1.636,59€",
  "outputTotalTaxesYear": "19.639,14€",
}
`;

exports[`calculators/gross-to-net > with page defaults > data from initial page load 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "506,25€",
  "outputEmployerTotalInsurancesYear": "6.075€",
  "outputResCareInsuranceMonth": "60€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "720€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "45€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "540€",
  "outputResEmployerGrossWageMonth": "3.007,75€",
  "outputResEmployerGrossWageYear": "36.093€",
  "outputResEmployerHealthInsuranceMonth": "196,25€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "2.355€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "196,25€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "2.355€",
  "outputResIncomeTaxMonth": "266,25€",
  "outputResIncomeTaxYear": "3.195€",
  "outputResNetWageMonth": "1.712,50€",
  "outputResNetWageYear": "20.550€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "521,25€",
  "outputTotalInsurancesYear": "6.255€",
  "outputTotalTaxes": "266,25€",
  "outputTotalTaxesYear": "3.195€",
}
`;

exports[`calculators/gross-to-net > with page defaults > taxClass 1 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "810€",
  "outputEmployerTotalInsurancesYear": "9.720€",
  "outputResCareInsuranceMonth": "96€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "1.152€",
  "outputResChurchTaxMonth": "51,59€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "619,11€",
  "outputResEmployerCareInsuranceMonth": "72€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "864€",
  "outputResEmployerGrossWageMonth": "4.812,40€",
  "outputResEmployerGrossWageYear": "57.748,80€",
  "outputResEmployerHealthInsuranceMonth": "314€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "3.768€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "2,40€",
  "outputResEmployerLevyThreeYear": "28,80€",
  "outputResEmployerLevyTotal": "2,40€",
  "outputResEmployerLevyTotalYear": "28,80€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "372€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "4.464€",
  "outputResEmployerUnemploymentInsuranceMonth": "52€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "624€",
  "outputResGrossWageMonth": "4.000€",
  "outputResGrossWageYear": "48.000€",
  "outputResHealthInsuranceMonth": "314€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "3.768€",
  "outputResIncomeTaxMonth": "644,91€",
  "outputResIncomeTaxYear": "7.738,92€",
  "outputResNetWageMonth": "2.469,50€",
  "outputResNetWageYear": "29.633,97€",
  "outputResPensionInsuranceMonth": "372€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "4.464€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "52€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "624€",
  "outputTotalInsurances": "834€",
  "outputTotalInsurancesYear": "10.008€",
  "outputTotalTaxes": "696,50€",
  "outputTotalTaxesYear": "8.358,03€",
}
`;

exports[`calculators/gross-to-net > with page defaults > taxClass 2 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "810€",
  "outputEmployerTotalInsurancesYear": "9.720€",
  "outputResCareInsuranceMonth": "96€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "1.152€",
  "outputResChurchTaxMonth": "42,81€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "513,75€",
  "outputResEmployerCareInsuranceMonth": "72€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "864€",
  "outputResEmployerGrossWageMonth": "4.812,40€",
  "outputResEmployerGrossWageYear": "57.748,80€",
  "outputResEmployerHealthInsuranceMonth": "314€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "3.768€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "2,40€",
  "outputResEmployerLevyThreeYear": "28,80€",
  "outputResEmployerLevyTotal": "2,40€",
  "outputResEmployerLevyTotalYear": "28,80€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "372€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "4.464€",
  "outputResEmployerUnemploymentInsuranceMonth": "52€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "624€",
  "outputResGrossWageMonth": "4.000€",
  "outputResGrossWageYear": "48.000€",
  "outputResHealthInsuranceMonth": "314€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "3.768€",
  "outputResIncomeTaxMonth": "535,16€",
  "outputResIncomeTaxYear": "6.421,92€",
  "outputResNetWageMonth": "2.588,03€",
  "outputResNetWageYear": "31.056,33€",
  "outputResPensionInsuranceMonth": "372€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "4.464€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "52€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "624€",
  "outputTotalInsurances": "834€",
  "outputTotalInsurancesYear": "10.008€",
  "outputTotalTaxes": "577,97€",
  "outputTotalTaxesYear": "6.935,67€",
}
`;

exports[`calculators/gross-to-net > with page defaults > taxClass 3 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "810€",
  "outputEmployerTotalInsurancesYear": "9.720€",
  "outputResCareInsuranceMonth": "96€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "1.152€",
  "outputResChurchTaxMonth": "26,85€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "322,23€",
  "outputResEmployerCareInsuranceMonth": "72€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "864€",
  "outputResEmployerGrossWageMonth": "4.812,40€",
  "outputResEmployerGrossWageYear": "57.748,80€",
  "outputResEmployerHealthInsuranceMonth": "314€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "3.768€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "2,40€",
  "outputResEmployerLevyThreeYear": "28,80€",
  "outputResEmployerLevyTotal": "2,40€",
  "outputResEmployerLevyTotalYear": "28,80€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "372€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "4.464€",
  "outputResEmployerUnemploymentInsuranceMonth": "52€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "624€",
  "outputResGrossWageMonth": "4.000€",
  "outputResGrossWageYear": "48.000€",
  "outputResHealthInsuranceMonth": "314€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "3.768€",
  "outputResIncomeTaxMonth": "335,66€",
  "outputResIncomeTaxYear": "4.027,92€",
  "outputResNetWageMonth": "2.803,49€",
  "outputResNetWageYear": "33.641,85€",
  "outputResPensionInsuranceMonth": "372€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "4.464€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "52€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "624€",
  "outputTotalInsurances": "834€",
  "outputTotalInsurancesYear": "10.008€",
  "outputTotalTaxes": "362,51€",
  "outputTotalTaxesYear": "4.350,15€",
}
`;

exports[`calculators/gross-to-net > with page defaults > taxClass 4 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "810€",
  "outputEmployerTotalInsurancesYear": "9.720€",
  "outputResCareInsuranceMonth": "96€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "1.152€",
  "outputResChurchTaxMonth": "51,59€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "619,11€",
  "outputResEmployerCareInsuranceMonth": "72€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "864€",
  "outputResEmployerGrossWageMonth": "4.812,40€",
  "outputResEmployerGrossWageYear": "57.748,80€",
  "outputResEmployerHealthInsuranceMonth": "314€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "3.768€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "2,40€",
  "outputResEmployerLevyThreeYear": "28,80€",
  "outputResEmployerLevyTotal": "2,40€",
  "outputResEmployerLevyTotalYear": "28,80€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "372€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "4.464€",
  "outputResEmployerUnemploymentInsuranceMonth": "52€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "624€",
  "outputResGrossWageMonth": "4.000€",
  "outputResGrossWageYear": "48.000€",
  "outputResHealthInsuranceMonth": "314€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "3.768€",
  "outputResIncomeTaxMonth": "644,91€",
  "outputResIncomeTaxYear": "7.738,92€",
  "outputResNetWageMonth": "2.469,50€",
  "outputResNetWageYear": "29.633,97€",
  "outputResPensionInsuranceMonth": "372€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "4.464€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "52€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "624€",
  "outputTotalInsurances": "834€",
  "outputTotalInsurancesYear": "10.008€",
  "outputTotalTaxes": "696,50€",
  "outputTotalTaxesYear": "8.358,03€",
}
`;

exports[`calculators/gross-to-net > with page defaults > taxClass 5 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "810€",
  "outputEmployerTotalInsurancesYear": "9.720€",
  "outputResCareInsuranceMonth": "96€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "1.152€",
  "outputResChurchTaxMonth": "84,19€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "1.010,31€",
  "outputResEmployerCareInsuranceMonth": "72€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "864€",
  "outputResEmployerGrossWageMonth": "4.812,40€",
  "outputResEmployerGrossWageYear": "57.748,80€",
  "outputResEmployerHealthInsuranceMonth": "314€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "3.768€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "2,40€",
  "outputResEmployerLevyThreeYear": "28,80€",
  "outputResEmployerLevyTotal": "2,40€",
  "outputResEmployerLevyTotalYear": "28,80€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "372€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "4.464€",
  "outputResEmployerUnemploymentInsuranceMonth": "52€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "624€",
  "outputResGrossWageMonth": "4.000€",
  "outputResGrossWageYear": "48.000€",
  "outputResHealthInsuranceMonth": "314€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "3.768€",
  "outputResIncomeTaxMonth": "1.052,41€",
  "outputResIncomeTaxYear": "12.628,92€",
  "outputResNetWageMonth": "2.029,40€",
  "outputResNetWageYear": "24.352,77€",
  "outputResPensionInsuranceMonth": "372€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "4.464€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "52€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "624€",
  "outputTotalInsurances": "834€",
  "outputTotalInsurancesYear": "10.008€",
  "outputTotalTaxes": "1.136,60€",
  "outputTotalTaxesYear": "13.639,23€",
}
`;

exports[`calculators/gross-to-net > with page defaults > taxClass 6 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "810€",
  "outputEmployerTotalInsurancesYear": "9.720€",
  "outputResCareInsuranceMonth": "96€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "1.152€",
  "outputResChurchTaxMonth": "87,09€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "1.045,11€",
  "outputResEmployerCareInsuranceMonth": "72€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "864€",
  "outputResEmployerGrossWageMonth": "4.812,40€",
  "outputResEmployerGrossWageYear": "57.748,80€",
  "outputResEmployerHealthInsuranceMonth": "314€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "3.768€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "2,40€",
  "outputResEmployerLevyThreeYear": "28,80€",
  "outputResEmployerLevyTotal": "2,40€",
  "outputResEmployerLevyTotalYear": "28,80€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "372€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "4.464€",
  "outputResEmployerUnemploymentInsuranceMonth": "52€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "624€",
  "outputResGrossWageMonth": "4.000€",
  "outputResGrossWageYear": "48.000€",
  "outputResHealthInsuranceMonth": "314€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "3.768€",
  "outputResIncomeTaxMonth": "1.088,66€",
  "outputResIncomeTaxYear": "13.063,92€",
  "outputResNetWageMonth": "1.990,25€",
  "outputResNetWageYear": "23.882,97€",
  "outputResPensionInsuranceMonth": "372€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "4.464€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "52€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "624€",
  "outputTotalInsurances": "834€",
  "outputTotalInsurancesYear": "10.008€",
  "outputTotalTaxes": "1.175,75€",
  "outputTotalTaxesYear": "14.109,03€",
}
`;

exports[`calculators/gross-to-net > without pension insurance > should return specific result for user made input 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "345,90€",
  "outputEmployerTotalInsurancesYear": "4.150,80€",
  "outputResCareInsuranceMonth": "60€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "720€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "45€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "540€",
  "outputResEmployerGrossWageMonth": "2.847,40€",
  "outputResEmployerGrossWageYear": "34.168,80€",
  "outputResEmployerHealthInsuranceMonth": "196,25€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "2.355€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "0€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "0€",
  "outputResEmployerUnemploymentInsuranceMonth": "104,65€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "1.255,80€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "196,25€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "2.355€",
  "outputResIncomeTaxMonth": "266,25€",
  "outputResIncomeTaxYear": "3.195€",
  "outputResNetWageMonth": "1.872,85€",
  "outputResNetWageYear": "22.474,20€",
  "outputResPensionInsuranceMonth": "0€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "0€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "104,65€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "1.255,80€",
  "outputTotalInsurances": "360,90€",
  "outputTotalInsurancesYear": "4.330,80€",
  "outputTotalTaxes": "266,25€",
  "outputTotalTaxesYear": "3.195€",
}
`;

exports[`tax year 2025 > should return specific result for tax year 2025 1`] = `
{
  "outputDisableResCareInsurance": false,
  "outputEmployerTotalInsurances": "506,25€",
  "outputEmployerTotalInsurancesYear": "6.075€",
  "outputResCareInsuranceMonth": "60€",
  "outputResCareInsurancePercentage": "2,40%",
  "outputResCareInsuranceYear": "720€",
  "outputResChurchTaxMonth": "0€",
  "outputResChurchTaxPercentage": " (8% der Lohnsteuer)",
  "outputResChurchTaxYear": "0€",
  "outputResEmployerCareInsuranceMonth": "45€",
  "outputResEmployerCareInsurancePercentage": "1,80%",
  "outputResEmployerCareInsuranceYear": "540€",
  "outputResEmployerGrossWageMonth": "3.007,75€",
  "outputResEmployerGrossWageYear": "36.093€",
  "outputResEmployerHealthInsuranceMonth": "196,25€",
  "outputResEmployerHealthInsurancePercentage": "7,85%",
  "outputResEmployerHealthInsuranceYear": "2.355€",
  "outputResEmployerLevyOneMonth": "0€",
  "outputResEmployerLevyOneYear": "0€",
  "outputResEmployerLevyThreeMonth": "1,50€",
  "outputResEmployerLevyThreeYear": "18€",
  "outputResEmployerLevyTotal": "1,50€",
  "outputResEmployerLevyTotalYear": "18€",
  "outputResEmployerLevyTwoMonth": "0€",
  "outputResEmployerLevyTwoYear": "0€",
  "outputResEmployerPensionInsuranceMonth": "232,50€",
  "outputResEmployerPensionInsurancePercentage": "9,30%",
  "outputResEmployerPensionInsuranceYear": "2.790€",
  "outputResEmployerUnemploymentInsuranceMonth": "32,50€",
  "outputResEmployerUnemploymentInsurancePercentage": "1,30%",
  "outputResEmployerUnemploymentInsuranceYear": "390€",
  "outputResGrossWageMonth": "2.500€",
  "outputResGrossWageYear": "30.000€",
  "outputResHealthInsuranceMonth": "196,25€",
  "outputResHealthInsurancePercentage": "7,85%",
  "outputResHealthInsuranceYear": "2.355€",
  "outputResIncomeTaxMonth": "206,83€",
  "outputResIncomeTaxYear": "2.481,96€",
  "outputResNetWageMonth": "1.771,92€",
  "outputResNetWageYear": "21.263,04€",
  "outputResPensionInsuranceMonth": "232,50€",
  "outputResPensionInsurancePercentage": "9,30%",
  "outputResPensionInsuranceYear": "2.790€",
  "outputResPrivateHealthInsuranceEmployerMonth": "0€",
  "outputResPrivateHealthInsuranceEmployerYear": "0€",
  "outputResSolidaritySurchargeMonth": "0€",
  "outputResSolidaritySurchargeYear": "0€",
  "outputResUnemploymentInsuranceMonth": "32,50€",
  "outputResUnemploymentInsurancePercentage": "1,30%",
  "outputResUnemploymentInsuranceYear": "390€",
  "outputTotalInsurances": "521,25€",
  "outputTotalInsurancesYear": "6.255€",
  "outputTotalTaxes": "206,83€",
  "outputTotalTaxesYear": "2.481,96€",
}
`;
